# IMO-JEPA

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
ditto/: __init__.py  evaluation.py  interfaces.py  models.py  train.py  training.py  utils.py  wm_training.py
scripts/: __init__.py  eval_pretrained.py  train_ditto_tworoom.py  train_lewm_tworoom.py
