[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[project]
name = "ditto"

version = "0.1.0"
description = "DITTO: Offline Imitation Learning with World Models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["imitation-learning", "world-models", "offline-rl", "ditto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "loguru",
  "tabulate",
  "gymnasium",
  "einops",
  "lancedb>=0.30.0",
  "pylance>=4.0.0",
  "pyarrow",
  "pillow",
  "tqdm",
  "typer",
  "rich",
  "tensorboard>=2.20.0",
  "imageio>=2.37.3",
  "stable-worldmodel>=0.0.6",
  "transformers>=5.8.1",
  "opencv-python>=4.13.0.92",
  "torch",
  "torchvision",
  "matplotlib>=3.10.9",
]

[project.urls]
Homepage = "https://github.com/Chiensaucisse/imo-jepa"
Repository = "https://github.com/Chiensaucisse/imo-jepa"
Issues = "https://github.com/Chiensaucisse/imo-jepa/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "ruff",
]

train = [
    "wandb",
]

[dependency-groups]
dev = [
    "ipdb",
    "pytest",
    "pytest-cov>=7.0.0",
    "ruff",
    "black",
    "isort",
    "flake8",
]

[tool.uv.build-backend]
module-root = "."
source-exclude = [
    "**/.mypy_cache/**",
    "**/__pycache__/**",
    "**/*.pyc",
]

[tool.uv.sources]
stable-worldmodel = { git = "https://github.com/galilai-group/stable-worldmodel" }

[tool.setuptools]
packages = ["ditto", "scripts"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
